FIXED: Framework: use Bootstrap grid system properly on tenant theme, fixes overlapping link bar on low resolution screens.

--- a/framework/html/themes/tenant/styles.css
+++ b/framework/html/themes/tenant/styles.css
@@ -1010,6 +1010,7 @@ TD.menudescription2 {
     COLOR: #FFFFFF;
     BACKGROUND: #00579b;
     background-image: url(images/banner.png);
+    padding: 4px;
 }
 a.submenu_on{
     font-family: verdana, arial, helvetica, sans-serif;
